super-heroes/kubernetes/deployment-fight.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
      app: "quarkus-workshop-fight"
      version: "01"
      group: "super-heroes"
  name: "quarkus-workshop-fight"
spec:
  replicas: 1
  selector:
      matchLabels:
          app: "quarkus-workshop-fight"
          version: "01"
          group: "super-heroes"
  template:
      metadata:
          labels:
              app: "quarkus-workshop-fight"
              version: "01"
              group: "super-heroes"
      spec:
          containers:
              - image: "esara/quarkus-workshop-fight"
                imagePullPolicy: "IfNotPresent"
                name: "quarkus-workshop-fight"
                ports:
                    - containerPort: 8080
                livenessProbe:
                  httpGet:
                      path: /q/health/live
                      port: 8080
                  initialDelaySeconds: 15
                  periodSeconds: 20
                readinessProbe:
                  httpGet:
                      path: /q/health/ready
                      port: 8080
                  initialDelaySeconds: 5
                  periodSeconds: 10

---
apiVersion: "v1"
kind: "Service"
metadata:
    labels:
        app: "quarkus-workshop-fight"
        version: "01"
        group: "super-heroes"
    name: "quarkus-workshop-fight"
spec:
    ports:
        - name: "http"
          port: 8080
    selector:
        app: "quarkus-workshop-fight"
        version: "01"
        group: "super-heroes"
    type: "ClusterIP"
